--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laura Gupta</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
         <h1>Laura Gupta</h1>
         <nav>
             <ul>
-                <li>About</li>
-                <li>Projects</li>
-                <li>Contact</li>
+                <li class="nav-item"><a href="#about-info">About</a></li>
+                <li class="nav-item"><a href="#project-info">Projects</a></li>
+                <li class="nav-item"><a href="#contact-info">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <div>
+        <img src="assets/images/laura.jpg" alt="laura infront of Christmas tree"/>
+    </div>
     <main>
         <section>
             <h3 id="about-info">About Me</h3>
