add resume section and nav, add images for first two projects, add content for first project and links for first project.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <ul>
                 <li class="nav-item"><a href="#about-info">About</a></li>
                 <li class="nav-item"><a href="#project-info">Projects</a></li>
+                <li class="nav-item"><a href="#resume-info">Resume</a></li>
                 <li class="nav-item"><a href="#contact-info">Contact</a></li>
             </ul>
         </nav>
@@ -23,13 +24,28 @@
     </div>
     <main>
         <section>
-            <h3 id="about-info">About Me</h3>
+            <h2 id="about-info">About Me</h2>
         </section>
         <section>
-            <h3 id="project-info">Projects</h3>
+            <h2 id="project-info">Projects</h2>
+            <article>
+                <h3><a href="https://lauragupta.github.io/accessible_develop/">Accessible Refactoring Project</a></h3>
+                <img src="assets/images/accessible-nav-hero copy.png" alt="website for Horiseon refactoring project">
+                <p>The goal for this client is to have an accessible website that uses semantic elements in a quality structure. It has sequential headings and a new title.
+
+                    I changed the title to Horiseon. Then I changed several div tags to more specific and semantic elements like header, nav, aside, and footer and changed the corresponding css when appropriate. I added alt codes for all images in the html.
+                    
+                    I also consolidated styling for several elements that all had the same style tags.See the code on <a href="https://github.com/lauragupta/accessible_develop">my git hub account</a>.</p>
+            </article>
+            <article></article>
+            <article></article>
+            <article></article>
         </section>
         <section>
-            <h3 id="contact-info">Contact</h3>
+            <h2 id="resume-info">Resume</h2>
+        </section>
+        <section>
+            <h2 id="contact-info">Contact</h2>
         </section>
     </main>
 </body>
