--- a/index.html
+++ b/index.html
@@ -25,21 +25,33 @@
     <main>
         <section>
             <h2 id="about-info">About Me</h2>
+            <p>I am a new web developer, but with a lot of solid work experience. I am a hard worker and take pride in doing things well. I have been learning HTML, CSS, and JavaScript. I am learning to be a web developer through a full time bootcamp where I am learning to be a full stack developer. I am passionate about learning and growing through education and employment experience. I have had several jobs where I have been promoted multiple times over just a few years working for a company. </p>
         </section>
         <section>
             <h2 id="project-info">Projects</h2>
             <article>
                 <h3><a href="https://lauragupta.github.io/accessible_develop/">Accessible Refactoring Project</a></h3>
-                <img src="assets/images/accessible-nav-hero copy.png" alt="website for Horiseon refactoring project">
+                <a href="https://lauragupta.github.io/accessible_develop/" ></a><img src="assets/images/accessible-nav-hero copy.png" alt="website for Horiseon refactoring project"></a>
                 <p>The goal for this client is to have an accessible website that uses semantic elements in a quality structure. It has sequential headings and a new title.
 
                     I changed the title to Horiseon. Then I changed several div tags to more specific and semantic elements like header, nav, aside, and footer and changed the corresponding css when appropriate. I added alt codes for all images in the html.
                     
-                    I also consolidated styling for several elements that all had the same style tags.See the code on <a href="https://github.com/lauragupta/accessible_develop">my git hub account</a>.</p>
+                    I also consolidated styling for several elements that all had the same style tags. <a href="https://github.com/lauragupta/accessible_develop">See my code on my GitHub repository!</a>.</p>
+            </article>
+            <article>
+                <h3><a href="https://lauragupta.github.io/Mini-Project-ClientLanding/">The Plant Lady Page</a></h3>
+                <a href="https://lauragupta.github.io/Mini-Project-ClientLanding/"><img src="./assets/images/client-landing-navigation copy.png" alt="picture of the plant lady page"></a>
+                <p>I created this website for The Plant Lady to be a landing page and to provide contact information to The Plant Lady. She wanted semantic site with at least 3 colors, navigation that stays fixed to the top and also includes a quick jump to the contact info form, a header and footer, and to be posted live on GitHub.<a href="https://github.com/lauragupta/Mini-Project-ClientLanding">See my code on my GitHub repository!</p>
             </article>
             <article></article>
-            <article></article>
-            <article></article>
+                <h3><a href="">Project Title</a></h3>
+                <img src="" alt="">
+                <p><a href="">See my code on my GitHub repository!</p>
+            <article>
+                <h3><a href="https://lauragupta.github.io/prework-about-me/">All About Me!</a></h3>
+                <img src="" alt="">
+                <p><a href="">See my code on my GitHub repository!</p>
+            </article>
         </section>
         <section>
             <h2 id="resume-info">Resume</h2>
