added contact info format, text, and links.

--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
                 <a href="https://lauragupta.github.io/Mini-Project-ClientLanding/"><img src="./assets/images/client-landing-navigation copy.png" alt="picture of the plant lady page"></a>
                 <p>I created this website for The Plant Lady to be a landing page and to provide contact information to The Plant Lady. She wanted semantic site with at least 3 colors, navigation that stays fixed to the top and also includes a quick jump to the contact info form, a header and footer, and to be posted live on GitHub.<a href="https://github.com/lauragupta/Mini-Project-ClientLanding">See my code on my GitHub repository!</p>
             </article>
-            <article></article>
-                <h3><a href="">Project Title</a></h3>
-                <img src="" alt="">
-                <p><a href="">See my code on my GitHub repository!</p>
             <article>
                 <h3><a href="https://lauragupta.github.io/prework-about-me/">All About Me!</a></h3>
                 <img src="" alt="">
@@ -58,6 +54,11 @@
         </section>
         <section>
             <h2 id="contact-info">Contact</h2>
+            <ul>
+                <a href="https://www.linkedin.com/in/laura-gupta-5a277158/"><li>Find me on LinkedIn</li></a>
+                <a href="https://github.com/lauragupta"><li>Check out my code on GitHub</li></a>
+                <a href="https://lauragupta.wordpress.com/"><li>Read my Blog!</li></a>
+            </ul>
         </section>
     </main>
 </body>
