--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
                 <p>I created this website for The Plant Lady to be a landing page and to provide contact information to The Plant Lady. She wanted semantic site with at least 3 colors, navigation that stays fixed to the top and also includes a quick jump to the contact info form, a header and footer, and to be posted live on GitHub.<a href="https://github.com/lauragupta/Mini-Project-ClientLanding">See my code on my GitHub repository!</p>
             </article>
             <article>
+                <h3><a href="https://lauragupta.github.io/collaboration1/">Flexbox facts!</a></h3>
+                <a href="https://lauragupta.github.io/collaboration1/"><img src="./assets/images/flexboxSite.jpg" alt="thumbnail of flexbox website">
+                <p>This was my first joint-coding site with a partner. We worked on using CSS including Flexbox to make a responsive site.  <a href="https://github.com/lauragupta/collaboration1">See my code on my GitHub repository!</p>
+            </article>
+            <article>
                 <h3><a href="https://lauragupta.github.io/prework-about-me/">All About Me!</a></h3>
-                <img src="" alt="">
-                <p><a href="">See my code on my GitHub repository!</p>
+                <a href="https://lauragupta.github.io/prework-about-me/"><img src="./assets/images/aboutMeSite.png" alt="thumbnail of about me site">
+                <p>For this website I learned to fork from another site and to edit the text of the html. <a href="https://github.com/lauragupta/prework-about-me">See my code on my GitHub repository!</p>
             </article>
         </section>
         <section>
