added resume and fixed bug from not closing out atribute tags for links in projects 3 and 4

--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
             </article>
             <article>
                 <h3><a href="https://lauragupta.github.io/collaboration1/">Flexbox facts!</a></h3>
-                <a href="https://lauragupta.github.io/collaboration1/"><img src="./assets/images/flexboxSite.jpg" alt="thumbnail of flexbox website">
+                <a href="https://lauragupta.github.io/collaboration1/"><img src="./assets/images/flexboxSite.jpg" alt="thumbnail of flexbox website"></a>
                 <p>This was my first joint-coding site with a partner. We worked on using CSS including Flexbox to make a responsive site.  <a href="https://github.com/lauragupta/collaboration1">See my code on my GitHub repository!</p>
             </article>
             <article>
                 <h3><a href="https://lauragupta.github.io/prework-about-me/">All About Me!</a></h3>
-                <a href="https://lauragupta.github.io/prework-about-me/"><img src="./assets/images/aboutMeSite.png" alt="thumbnail of about me site">
+                <a href="https://lauragupta.github.io/prework-about-me/"><img src="./assets/images/aboutMeSite.png" alt="thumbnail of about me site"></a>
                 <p>For this website I learned to fork from another site and to edit the text of the html. <a href="https://github.com/lauragupta/prework-about-me">See my code on my GitHub repository!</p>
             </article>
         </section>
         <section>
-            <h2 id="resume-info">Resume</h2>
+            <h2 id="resume-info"><a href="./assets/images/Web Developer Resume Laura Gupta 2021.pdf" >Resume</a></h2>
         </section>
         <section>
             <h2 id="contact-info">Contact</h2>
