--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
         <section>
             <h2 id="project-info">Projects</h2>
-            <article>
+            <article class="project-main">
                 <h3><a href="https://lauragupta.github.io/accessible_develop/">Accessible Refactoring Project</a></h3>
                 <a href="https://lauragupta.github.io/accessible_develop/" ></a><img src="assets/images/accessible-nav-hero copy.png" alt="website for Horiseon refactoring project"></a>
                 <p>The goal for this client is to have an accessible website that uses semantic elements in a quality structure. It has sequential headings and a new title.
@@ -38,19 +38,19 @@
                     
                     I also consolidated styling for several elements that all had the same style tags. <a href="https://github.com/lauragupta/accessible_develop">See my code on my GitHub repository!</a>.</p>
             </article>
-            <article>
+            <article class="project-secondary">
                 <h3><a href="https://lauragupta.github.io/Mini-Project-ClientLanding/">The Plant Lady Page</a></h3>
-                <a href="https://lauragupta.github.io/Mini-Project-ClientLanding/"><img src="./assets/images/client-landing-navigation copy.png" alt="picture of the plant lady page"></a>
+                <a href="https://lauragupta.github.io/Mini-Project-ClientLanding/"><img class="thumbnail" src="./assets/images/client-landing-navigation copy.png" alt="picture of the plant lady page"></a>
                 <p>I created this website for The Plant Lady to be a landing page and to provide contact information to The Plant Lady. She wanted semantic site with at least 3 colors, navigation that stays fixed to the top and also includes a quick jump to the contact info form, a header and footer, and to be posted live on GitHub.<a href="https://github.com/lauragupta/Mini-Project-ClientLanding">See my code on my GitHub repository!</p>
             </article>
-            <article>
+            <article class="project-secondary">
                 <h3><a href="https://lauragupta.github.io/collaboration1/">Flexbox facts!</a></h3>
-                <a href="https://lauragupta.github.io/collaboration1/"><img src="./assets/images/flexboxSite.jpg" alt="thumbnail of flexbox website"></a>
+                <a href="https://lauragupta.github.io/collaboration1/"><img class="thumbnail" src="./assets/images/flexboxSite.jpg" alt="thumbnail of flexbox website"></a>
                 <p>This was my first joint-coding site with a partner. We worked on using CSS including Flexbox to make a responsive site.  <a href="https://github.com/lauragupta/collaboration1">See my code on my GitHub repository!</p>
             </article>
-            <article>
+            <article class="project-secondary">
                 <h3><a href="https://lauragupta.github.io/prework-about-me/">All About Me!</a></h3>
-                <a href="https://lauragupta.github.io/prework-about-me/"><img src="./assets/images/aboutMeSite.png" alt="thumbnail of about me site"></a>
+                <a href="https://lauragupta.github.io/prework-about-me/"><img class="thumbnail" src="./assets/images/aboutMeSite.png" alt="thumbnail of about me site"></a>
                 <p>For this website I learned to fork from another site and to edit the text of the html. <a href="https://github.com/lauragupta/prework-about-me">See my code on my GitHub repository!</p>
             </article>
         </section>
