add resume thumbnail and link img to thumbnail.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </section>
         <section>
             <h2 id="resume-info"><a href="./assets/images/Web Developer Resume Laura Gupta 2021.pdf" >Resume</a></h2>
+            <a href="./assets/images/Web Developer Resume Laura Gupta 2021.pdf" ><img class= "thumbnail" src="./assets/images/resume.jpg" alt="thumbnail of resume"></a>
         </section>
         <section>
             <h2 id="contact-info">Contact</h2>
