fix blog link, fix contact spacing, fix resume photo to be smaller with a new class, increase font size for name in header

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
         <section>
             <h2 id="resume-info"><a href="./assets/images/Web Developer Resume Laura Gupta 2021.pdf" >Resume</a></h2>
             <a href="./assets/images/Web Developer Resume Laura Gupta 2021.pdf" >
-                <img class= "thumbnail" src="./assets/images/resume.jpg" alt="thumbnail of resume">
+                <img class= "resume" src="./assets/images/resume.jpg" alt="thumbnail of resume">
             </a>
         </section>
         <section>
             <h2 id="contact-info">Contact</h2>
-            <ul>
+            <ul class="contact-me-list">
                 <li><a href="https://www.linkedin.com/in/laura-gupta-5a277158/">Find me on LinkedIn</a></li>
                 <li><a href="https://github.com/lauragupta">Check out my code on GitHub</a></li>
-                <li><a href="https://lauragupta.wordpress.com/"></a>Read my Blog!</a></li>
+                <li><a href="https://lauragupta.wordpress.com/">Read my Blog!</a></li>
             </ul>
         </section>
     </main>
