last minute edit to content and to fix broken links in README

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section>
             <h2 id="about-info">About Me</h2>
-            <p>I am a new web developer, but with a lot of solid work experience. I am a hard worker and take pride in doing things well. I have been learning HTML, CSS, and JavaScript. I am learning to be a web developer through a full time bootcamp where I am learning to be a full stack developer. I am passionate about learning and growing through education and employment experience. I have had several jobs where I have been promoted multiple times over just a few years working for a company. </p>
+            <p>I am a new web developer, with a lot of solid work experience. I am a hard worker and take pride in doing things well. So far I have been learning HTML, CSS, and JavaScript. I am learning to be a web developer through a full time bootcamp where I am learning to be a full stack developer. I am passionate about learning and growing through education and employment experience. I have had several jobs where I have been promoted multiple times over just a few years working for a company. </p>
         </section>
         <section>
             <h2 id="project-info">Projects</h2>
@@ -49,11 +49,11 @@
                     <p>I created this landing page to provide contact information to The Plant Lady. She wanted semantic site with at least 3 colors, navigation that stays fixed to the top and also includes a quick jump to the contact info form, a header and footer.<a href="https://github.com/lauragupta/Mini-Project-ClientLanding">See my code on my GitHub repository!</a></p>
                 </article>
                 <article class="project-secondary">
-                    <h3><a href="https://lauragupta.github.io/collaboration1/">Flexbox facts!</a></h3>
+                    <h3><a href="https://lauragupta.github.io/collaboration1/">Flexbox Facts Page</a></h3>
                     <a href="https://lauragupta.github.io/collaboration1/">
                         <img class="thumbnail" src="./assets/images/flexboxSite.jpg" alt="thumbnail of flexbox website">
                     </a>
-                    <p>This was my first joint-coding site with a partner. We worked on using CSS including Flexbox to make a responsive site.  <a href="https://github.com/lauragupta/collaboration1">See my code on my GitHub repository!</a></p>
+                    <p>This was my first joint-coding site with a partner. We worked on using CSS including Flexbox to make a responsive site.  <a href="https://github.com/lauragupta/collaboration1">See our code on my GitHub repository!</a></p>
                 </article>
                 <article class="project-secondary">
                     <h3><a href="https://lauragupta.github.io/prework-about-me/">All About Me!</a></h3>
