add comments to html and css pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Laura Gupta</h1>
+        <!--navigation to links within the page-->
         <nav>
             <ul>
                 <li class="nav-item"><a href="#about-info">About</a></li>
@@ -19,10 +20,12 @@
             </ul>
         </nav>
     </header>
+    <!--photo of me! -->
     <div>
         <img class="banner" src="assets/images/laura.jpg" alt="laura infront of Christmas tree"/>
     </div>
     <main>
+        <!--About Me Section-->
         <section>
             <h2 id="about-info">About Me</h2>
             <p>I am a new web developer, with a lot of solid work experience. I am a hard worker and take pride in doing things well. So far I have been learning HTML, CSS, and JavaScript. I am learning to be a web developer through a full time bootcamp where I am learning to be a full stack developer. I am passionate about learning and growing through education and employment experience. I have had several jobs where I have been promoted multiple times over just a few years working for a company. </p>
@@ -30,6 +33,7 @@
         <section>
             <h2 id="project-info">Projects</h2>
             <article class="project-main">
+                <!--this h3 and image both link to the live site-->
                 <h3><a href="https://lauragupta.github.io/accessible_develop/">Accessible Refactoring Project</a></h3>
                 <a href="https://lauragupta.github.io/accessible_develop/" >
                     <img class="main-article-photo" src="./assets/images/accessible-nav-hero.png" alt="website for Horiseon refactoring project">
@@ -42,29 +46,36 @@
             </article>
             <div class="small-projects-container">
                 <article class="project-secondary">
+                    <!--this h3 and image both link to the live site-->
                     <h3><a href="https://lauragupta.github.io/Mini-Project-ClientLanding/">The Plant Lady Page</a></h3>
                     <a href="https://lauragupta.github.io/Mini-Project-ClientLanding/">
                         <img class="thumbnail" src="./assets/images/client-landing-nav.png" alt="picture of the plant lady page">
                     </a>
+                    <!-- The link at the end of this discription is to the github repository. -->
                     <p>I created this landing page to provide contact information to The Plant Lady. She wanted semantic site with at least 3 colors, navigation that stays fixed to the top and also includes a quick jump to the contact info form, a header and footer.<a href="https://github.com/lauragupta/Mini-Project-ClientLanding">See my code on my GitHub repository!</a></p>
                 </article>
                 <article class="project-secondary">
+                    <!--this h3 and image both link to the live site-->
                     <h3><a href="https://lauragupta.github.io/collaboration1/">Flexbox Facts Page</a></h3>
                     <a href="https://lauragupta.github.io/collaboration1/">
                         <img class="thumbnail" src="./assets/images/flexboxSite.jpg" alt="thumbnail of flexbox website">
                     </a>
+                    <!-- The link at the end of this discription is to the github repository. -->
                     <p>This was my first joint-coding site with a partner. We worked on using CSS including Flexbox to make a responsive site.  <a href="https://github.com/lauragupta/collaboration1">See our code on my GitHub repository!</a></p>
                 </article>
                 <article class="project-secondary">
+                    <!--this h3 and image both link to the live site-->
                     <h3><a href="https://lauragupta.github.io/prework-about-me/">All About Me!</a></h3>
                     <a href="https://lauragupta.github.io/prework-about-me/">
                         <img class="thumbnail" src="./assets/images/aboutMeSite.png" alt="thumbnail of about me site">
                     </a>
+                    <!-- The link at the end of this discription is to the github repository. -->
                     <p>For this website I learned to fork from another site and to edit the text of the html. <a href="https://github.com/lauragupta/prework-about-me">See my code on my GitHub repository!</a></p>
                 </article>
             </div>
         </section>
         <section>
+            <!--this h2 and image both link to the pdf of my resume -->
             <h2 id="resume-info"><a href="./assets/images/Web Developer Resume Laura Gupta 2021.pdf" >Resume</a></h2>
             <a href="./assets/images/Web Developer Resume Laura Gupta 2021.pdf" >
                 <img class= "resume" src="./assets/images/resume.jpg" alt="thumbnail of resume">
@@ -73,6 +84,7 @@
         <section>
             <h2 id="contact-info">Contact</h2>
             <ul class="contact-me-list">
+                <!-- these links are to see more of my work and more about me and how to contact me-->
                 <li><a href="https://www.linkedin.com/in/laura-gupta-5a277158/">Find me on LinkedIn</a></li>
                 <li><a href="https://github.com/lauragupta">Check out my code on GitHub</a></li>
                 <li><a href="https://lauragupta.wordpress.com/">Read my Blog!</a></li>
